--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fale Conosco</title>
     <link rel="stylesheet" href="./style/fale-conosco.css">
+    <link rel="stylesheet" href="./style/header.css">
 </head>
 <body>
+    <header class="header">
+        <a href="./index.html" class="logo">Liber</a>
+        <div class="header-right">
+          <a href="./index.html">Home</a>
+          <a href="./quem-somos.html">Quem Somos</a>
+          <a class="active" href="./fale-conosco.html">Fale Conosco</a>
+        </div>
+    </header>
     <div class="outer-container">
         <div class="container">
             <div class="title"><h1>Fale Conosco</h1></div>
