--- a/quem-somos.html
+++ b/quem-somos.html
@@ -6,17 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem Somos</title>
     <link rel="stylesheet" href="./style/quem-somos.css">
+    <link rel="stylesheet" href="./style/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header>
-        <h1>Quem Somos</h1>
+    <header class="header">
+        <a href="./index.html" class="logo">Liber</a>
+        <div class="header-right">
+          <a href="./index.html">Home</a>
+          <a class="active" href="./quem-somos.html">Quem Somos</a>
+          <a href="./fale-conosco.html">Fale Conosco</a>
+        </div>
     </header>
+
+    <div class="title">
+        <h1>Quem Somos</h1>
+    </div>
     <div class="row">
         <div class="card column">
             <img src="./img/foto.jfif" alt="Lucas" width="100%">
             <h1>Lucas Pedrosa</h1>
-            <p class="title">Desenvolvedor</p>
+            <p class="job">Desenvolvedor</p>
             <a href="https://wa.me/5519983158641" target="_blank"><i class="fa fa-whatsapp"></i></a>
             <a href="#"><i class="fa fa-linkedin" target="_blank"></i></a>
             <p><button>Contate</button></p>
@@ -25,14 +35,14 @@
         <div class="card column">
             <img src="./img/giovanni.jpg" alt="Lucas" width="100%">
             <h1>Giovanni Zanotti</h1>
-            <p class="title">Desenvolvedor</p>
+            <p class="job">Desenvolvedor</p>
             <a href="https://wa.me/5519997560631" target="_blank"><i class="fa fa-whatsapp"></i></a>
             <a href="#"><i class="fa fa-linkedin" target="_blank"></i></a>
             <p><button>Contate</button></p>
         </div>
     </div>
     <footer>
-        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a></p>
+        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html">Quem Somos</a></p>
     </footer>
 </body>
 </html>
