--- a/quem-somos.html
+++ b/quem-somos.html
@@ -10,18 +10,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html" class="logo">Liber</a>
-        <div class="header-right">
-          <a href="./index.html">Home</a>
-          <a class="active" href="./quem-somos.html">Quem Somos</a>
-          <a href="./fale-conosco.html">Fale Conosco</a>
-        </div>
+    <header>
+        <header class="header">
+            <a href="./index.html" class="logo">Liber</a>
+            <div class="header-right">
+              <a href="./index.html">Home</a>
+              <a class="active" href="./quem-somos.html">Quem Somos</a>
+              <a href="./fale-conosco.html">Fale Conosco</a>
+            </div>
     </header>
 
     <div class="title">
         <h1>Quem Somos</h1>
     </div>
+
     <div class="row">
         <div class="card column">
             <img src="./img/foto.jfif" alt="Lucas" width="100%">
