--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -6,36 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fale Conosco</title>
     <link rel="stylesheet" href="./style/fale-conosco.css">
+    <link rel="stylesheet" href="./style/header.css">
 </head>
 <body>
-    <div class="outer-container">
-        <div class="container">
-            <div class="title"><h1>Fale Conosco</h1></div>
-            <form action="#">
-                <div class="details-box">
-                    <div class="input-box">
-                        <label class="details">Nome Completo</label>
-                        <input type="text" placeholder="Insira seu nome" required>
+    <header class="menu-header">
+        <a href="./index.html" class="logo">Liber</a>
+        <nav class="header-right">
+          <a href="./index.html">Home</a>
+          <a href="./quem-somos.html">Quem Somos</a>
+          <a class="active" href="./fale-conosco.html">Fale Conosco</a>
+        </nav>
+    </header>
+
+    <section>
+        <div class="outer-container">
+            <div class="container">
+                <div class="title"><h1>Fale Conosco</h1></div>
+                <form action="#">
+                    <div class="details-box">
+                        <div class="input-box">
+                            <label class="details" for="nome">Nome Completo</label>
+                            <input type="text" id="nome" placeholder="Insira seu nome" required>
+                        </div>
+                        <div class="input-box">
+                            <label class="details" for="email">Email</label>
+                            <input type="email" id="email" placeholder="Insira seu email" required>
+                        </div>
+                        <div class="input-box">
+                            <label class="details" for="telefone">Telefone</label>
+                            <input type="number" id="telefone" placeholder="Insira seu telefone" required>
+                        </div>
+                        <div class="input-box">
+                            <label class="details" for="mensagem">Mensagem</label>
+                            <textarea name="mensagem" id="mensagem" cols="30" rows="10" required></textarea>
+                        </div>
                     </div>
-                    <div class="input-box">
-                        <label class="details">Email</label>
-                        <input type="email" placeholder="Insira seu email" required>
+                    <div class="button">
+                        <input type="submit">
                     </div>
-                    <div class="input-box">
-                        <label class="details">Telefone</label>
-                        <input type="number" placeholder="Insira seu telefone" required>
-                    </div>
-                    <div class="input-box">
-                        <label class="details">Mensagem</label>
-                        <textarea name="" id="" cols="30" rows="10" required></textarea>
-                    </div>
-                </div>
-                <div class="button">
-                    <input type="submit">
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-    </div>
+    </section>
+    
     <footer>
         <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a></p>
     </footer>
