--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -50,7 +50,7 @@
     </section>
     
     <footer>
-        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a></p>
+        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a> | <a href="https://github.com/Lucas-Pedrosa/WebDashboard" target="_blank">Github</a></p>
     </footer>
     
 </body>
