--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <script src="./js/script.js"></script>
 
       <footer>
-        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a></p>
+        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a> | <a href="https://github.com/Lucas-Pedrosa/WebDashboard" target="_blank">Github</a></p>
     </footer>
 
 </body>
