--- a/quem-somos.html
+++ b/quem-somos.html
@@ -46,7 +46,7 @@
     </section>
     
     <footer>
-        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html">Quem Somos</a></p>
+        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html">Quem Somos</a> | <a href="https://github.com/Lucas-Pedrosa/WebDashboard" target="_blank">Github</a></p>
     </footer>
 </body>
 </html>
