Adicionado tag main

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -19,7 +19,7 @@
     </header>
 
     <section>
-        <div class="outer-container">
+        <main class="outer-container">
             <div class="container">
                 <div class="title"><h1>Fale Conosco</h1></div>
                 <form action="#">
@@ -46,7 +46,7 @@
                     </div>
                 </form>
             </div>
-        </div>
+        </main>
     </section>
     
     <footer>
