--- a/quem-somos.html
+++ b/quem-somos.html
@@ -24,7 +24,7 @@
     </section>
 
     <section>
-        <div class="row">
+        <main class="row">
             <div class="card column">
                 <img src="./img/foto.jfif" alt="Lucas">
                 <h1>Lucas Pedrosa</h1>
@@ -42,7 +42,7 @@
                 <a href="#"><i class="fa fa-linkedin"></i></a>
                 <p><button>Contate</button></p>
             </div>
-        </div>
+        </main>
     </section>
     
     <footer>
