Correções da última apresentação.

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -19,31 +19,35 @@
         </nav>
     </header>
 
-    <section class="title">
-        <h1>Quem Somos</h1>
-    </section>
+    <main>
 
-    <section>
-        <main class="row">
-            <div class="card column">
-                <img src="./img/foto.jfif" alt="Lucas">
-                <h1>Lucas Pedrosa</h1>
-                <p class="job">Desenvolvedor</p>
-                <a href="https://wa.me/5519983158641"><i class="fa fa-whatsapp"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <p><button>Contate</button></p>
-            </div>
+        <section class="title">
+            <h1>Quem Somos</h1>
+        </section>
 
-            <div class="card column">
-                <img src="./img/giovanni.jpg" alt="Giovanni">
-                <h1>Giovanni Zanotti</h1>
-                <p class="job">Desenvolvedor</p>
-                <a href="https://wa.me/5519997560631"><i class="fa fa-whatsapp"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <p><button>Contate</button></p>
+        <section>
+            <div class="row">
+                <div class="card column">
+                    <img src="./img/foto.jfif" alt="Lucas">
+                    <h1>Lucas Pedrosa</h1>
+                    <p class="job">Desenvolvedor</p>
+                    <a href="https://wa.me/5519983158641"><i class="fa fa-whatsapp"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <p><button>Contate</button></p>
+                </div>
+
+                <div class="card column">
+                    <img src="./img/giovanni.jpg" alt="Giovanni">
+                    <h1>Giovanni Zanotti</h1>
+                    <p class="job">Desenvolvedor</p>
+                    <a href="https://wa.me/5519997560631"><i class="fa fa-whatsapp"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <p><button>Contate</button></p>
+                </div>
             </div>
-        </main>
-    </section>
+        </section>
+
+    </main>
     
     <footer>
         <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html">Quem Somos</a> | <a href="https://github.com/Lucas-Pedrosa/WebDashboard" target="_blank">Github</a></p>
