--- a/quem-somos.html
+++ b/quem-somos.html
@@ -12,41 +12,38 @@
 <body>
     <header class="menu-header">
         <a href="./index.html" class="logo">Liber</a>
-        <nav class="header-right">
+        <div class="header-right">
             <a href="./index.html">Home</a>
             <a class="active" href="./quem-somos.html">Quem Somos</a>
             <a href="./fale-conosco.html">Fale Conosco</a>
-        </nav>
+        </div>
     </header>
 
-    <section class="title">
+    <div class="title">
         <h1>Quem Somos</h1>
-    </section>
+    </div>
 
-    <section>
-        <main class="row">
-            <div class="card column">
-                <img src="./img/foto.jfif" alt="Lucas">
-                <h1>Lucas Pedrosa</h1>
-                <p class="job">Desenvolvedor</p>
-                <a href="https://wa.me/5519983158641"><i class="fa fa-whatsapp"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <p><button>Contate</button></p>
-            </div>
+    <div class="row">
+        <div class="card column">
+            <img src="./img/foto.jfif" alt="Lucas">
+            <h1>Lucas Pedrosa</h1>
+            <p class="job">Desenvolvedor</p>
+            <a href="https://wa.me/5519983158641"><i class="fa fa-whatsapp"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <p><button>Contate</button></p>
+        </div>
 
-            <div class="card column">
-                <img src="./img/giovanni.jpg" alt="Giovanni">
-                <h1>Giovanni Zanotti</h1>
-                <p class="job">Desenvolvedor</p>
-                <a href="https://wa.me/5519997560631"><i class="fa fa-whatsapp"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <p><button>Contate</button></p>
-            </div>
-        </main>
-    </section>
-    
+        <div class="card column">
+            <img src="./img/giovanni.jpg" alt="Giovanni">
+            <h1>Giovanni Zanotti</h1>
+            <p class="job">Desenvolvedor</p>
+            <a href="https://wa.me/5519997560631"><i class="fa fa-whatsapp"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <p><button>Contate</button></p>
+        </div>
+    </div>
     <footer>
-        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html">Quem Somos</a> | <a href="https://github.com/Lucas-Pedrosa/WebDashboard" target="_blank">Github</a></p>
+        <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html">Quem Somos</a></p>
     </footer>
 </body>
 </html>
