--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -7,6 +7,7 @@
     <title>Fale Conosco</title>
     <link rel="stylesheet" href="./style/fale-conosco.css">
     <link rel="stylesheet" href="./style/header.css">
+    <script type="module" src="js/firebase.js"></script>
 </head>
 <body>
     <header class="menu-header">
@@ -40,12 +41,13 @@
                     </div>
                 </div>
                 <div class="button">
-                    <input type="submit">
+                    <input id="" type="submit">
                 </div>
             </form>
         </div>
     </div>
 
+    <button id ="btnEnviar">Enviar</button>
     
     <footer>
         <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a></p>
