Finalizado Fale Conosco

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -21,33 +21,32 @@
     <div class="outer-container">
         <div class="container">
             <div class="title"><h1>Fale Conosco</h1></div>
-            <form action="#">
+            <form>
                 <div class="details-box">
                     <div class="input-box">
                         <label class="details">Nome Completo</label>
-                        <input type="text" placeholder="Insira seu nome" required>
+                        <input id="nome" type="text" placeholder="Insira seu nome" required>
                     </div>
                     <div class="input-box">
                         <label class="details">Email</label>
-                        <input type="email" placeholder="Insira seu email" required>
+                        <input id="email" type="email" placeholder="Insira seu email" required>
                     </div>
                     <div class="input-box">
                         <label class="details">Telefone</label>
-                        <input type="number" placeholder="Insira seu telefone" required>
+                        <input id="telefone" type="number" placeholder="Insira seu telefone" required>
                     </div>
                     <div class="input-box">
                         <label class="details">Mensagem</label>
-                        <textarea name="mensagem" id="10" cols="30" rows="10" required></textarea>
+                        <textarea name="mensagem" id="mensagem" cols="30" rows="10" required></textarea>
                     </div>
                 </div>
-                <div class="button">
-                    <input id="" type="submit">
-                </div>
+                
             </form>
+            <div class="button">
+                <button class="button" id ="btnEnviar">Enviar</button>
+            </div>
         </div>
     </div>
-
-    <button id ="btnEnviar">Enviar</button>
     
     <footer>
         <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a></p>
