ajustes do carregamento da tabela dinamica

--- a/index.html
+++ b/index.html
@@ -147,20 +147,11 @@
 
         </div>
 
-        <div class="grafico">
-
-          <figure class="highcharts-figure">
-              <div id="container9"></div>
-          </figure>
-
-        </div>
-
         
-
       </div>
 
+      <script type="module" src="./js/script.js"></script>
       
-      <script src="./js/script.js"></script>
 
       <footer>
         <p>Liber&copy; Desenvolvido por Lucas e Giovanni | <a href="./quem-somos.html" target="_blank">Quem Somos</a></p>
