Atualização dinâmcica do gráfico

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </div>
           </div>
 
+          <a href="./atualizar-grafico.html">Atualizar</a>
           <input class="botao" type="button" value="Detalhes">
 
         </div>
